# DockerisedDjango

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
docker/celery-flower/: entry.sh
docker/celery-worker/: entry.sh
example_docker/: db.sqlite3  manage.py
example_docker/chat/: consumers.py  tasks.py  urls.py  views.py
example_docker/chat/templates/chat/: files.html  index.html  room.html
example_docker/chat/tests/: test_consumers.py
example_docker/example_docker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
example_docker/functional_test/: func_test1.py
