[tool.poetry]
name = "dockeriseddjango"
version = "0.1.0"
description = ""
authors = ["Liam O'Brien <liam.obrien@atteris.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.0.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
